fixed-malloc-all.h

typedef struct CList CList;
/**
 * struct CList - Entry of a circular double linked list
 * @next:               next entry
 * @prev:               previous entry
 *
 * Each entry in a list must embed a CList object. This object contains
 * pointers to its next and previous elements, which can be freely accessed by
 * the API user at any time. Note that the list is circular, and the list head
 * is linked in the list as well.
 *
 * The list head must be initialized via C_LIST_INIT before use. There is no
 * reason to initialize entry objects before linking them. However, if you need
 * a boolean state that tells you whether the entry is linked or not, you should
 * initialize the entry via C_LIST_INIT as well.
 */
struct CList {
        CList *next;
        CList *prev;
};
#define FM_PAGE_SHIFT 12
// 4096
#define FM_PAGE_SIZE (1 << FM_PAGE_SHIFT)
#define FM_LM_T_TRANSIENT 0x1
#define FM_LM_T_PERSISTENT 0x2
int fm_lm_reinit(void *buffer, size_t size, int zero_filled);
void *fm_lm_malloc(size_t size, int t);
void fm_lm_free(void *ptr);
void *fm_lm_realloc(void *ptr, size_t size, int t);
int fm_sm_reinit(void *buffer, size_t size, int zero_filled);
void *fm_sm_malloc(size_t size);
void fm_sm_free(void *ptr);
void *fm_sm_realloc(void *ptr, size_t size);
/* #include "c-list.h" */
/* #include "utils.h" */

typedef struct region_t {
  CList link;
  uint64_t start_page;
  uint64_t pages;
} region_t;
void *fm_lm_test_buffer_pointer() { return __buffer_start; }
size_t fm_lm_test_total_buffer_size() { return __buffer_size; }
int fm_lm_reinit(void *buffer, size_t size, int zero_filled) {
  if ((((size_t)buffer) & (FM_PAGE_SIZE - 1)) != 0) {
    FM_DEBUG("Memory buffer must be aligned at 4K boundary!");
    FM_ABORT();
  }
  if ((size & (FM_PAGE_SIZE - 1)) != 0) {
    FM_DEBUG("Memory size must be aligned to 4K!");
    FM_ABORT();
  }
  if ((size < 128 * 1024) || (size > 0xFFFFFFFF)) {
    FM_DEBUG("Memory size must be between 128KB and 4GB!");
    FM_ABORT();
  }

  __buffer_start = buffer;
#ifdef FM_TEST_SUPPORT
  __buffer_size = size;
#endif
  __meta = buffer;
  if (!zero_filled) {
    memset(buffer, 0, FM_PAGE_SIZE);
  }
  region_t *region = (region_t *)(((uint8_t *)buffer) + FM_PAGE_SIZE);
  region->start_page = 1;
  region->pages = size / FM_PAGE_SIZE - 1;
  c_list_init(&__free_regions);
  c_list_link_after(&__free_regions, &region->link);
  c_list_init(&__freed_memories);
  return 0;
}
void fm_lm_free(void *ptr) {
#ifdef FM_GUARDS
  if ((((size_t)ptr) & (FM_PAGE_SIZE - 1)) != 0) {
    FM_DEBUG(
        "Pointer passed to free is not aligned, which might be tampered with!");
    FM_ABORT();
  }
#endif
  size_t first_page = ptr_to_page(ptr);
  size_t pages = fetch_alloced_pages(first_page);
  region_t *region = (region_t *)ptr;
  region->start_page = first_page;
  region->pages = pages;
  c_list_link_tail(&__freed_memories, &region->link);
}
void *fm_lm_realloc(void *ptr, size_t size, int t) {
  if (ptr == NULL) {
    return fm_lm_malloc(size, t);
  }
#ifdef FM_GUARDS
  if ((((size_t)ptr) & (FM_PAGE_SIZE - 1)) != 0) {
    FM_DEBUG(
        "Pointer passed to free is not aligned, which might be tampered with!");
    FM_ABORT();
  }
#endif
  size = __fm_roundup(size, FM_PAGE_SIZE);
  size_t new_pages = size / FM_PAGE_SIZE;
  size_t first_page = ptr_to_page(ptr);
  size_t pages = fetch_alloced_pages(first_page);
  if (new_pages <= pages) {
    return ptr;
  }
  size_t succeeding_pages =
      alloc_designated_free_pages(first_page + pages, new_pages - pages);
  if (succeeding_pages != 0) {
    // If there are enough free pages that are immediately after current
    // allocated memory, we won't need to move the pages elsewhere
    return ptr;
  }
  void *p = fm_lm_malloc(size, t);
  if (p != NULL) {
    memcpy(p, ptr, pages * FM_PAGE_SIZE);
    fm_lm_free(ptr);
  }
  return p;
}
void *fm_lm_malloc(size_t size, int t) {
  size = __fm_roundup(size, FM_PAGE_SIZE);
  size_t pages = size / FM_PAGE_SIZE;

  size_t page = alloc(pages, t);
  if (page == 0) {
    restore_all_freed_memories();
    page = alloc(pages, t);
  }
  if (page == 0) {
    return NULL;
  }
  mark_alloced_pages(page, pages);
  return page_to_ptr(page);
}
int fm_sm_reinit(void *buffer, size_t size, int zero_filled) {
  int ret = fm_lm_reinit(buffer, size, zero_filled);
  if (ret != 0) {
    return ret;
  }
  for (size_t i = 0; i < sizeof(slab_lists) / sizeof(CList); i++) {
    c_list_init(&slab_lists[i]);
  }
  return 0;
}
typedef struct page_meta_t {
  CList link;
  uint64_t bitmap[2];
  size_t size;
  size_t count;
  size_t slab_index;
  size_t _padding;
} page_meta_t;
void fm_sm_free(void *ptr) {
  if ((((size_t)ptr) & (FM_PAGE_SIZE - 1)) == 0) {
    fm_lm_free(ptr);
    return;
  }
  page_meta_t *meta = (page_meta_t *)__fm_rounddown((size_t)ptr, FM_PAGE_SIZE);
  size_t element_index = ptr_to_index(meta, ptr);
  int all_used = bitmap_all_used(meta);
  bitmap_clear(meta, element_index);
  if (all_used) {
    c_list_link_tail(&slab_lists[meta->slab_index], &meta->link);
    FM_DEBUG("Retrieving previously fully used slab: %p %ld\n", meta,
             meta->size);
  }
}
void *fm_sm_realloc(void *ptr, size_t size) {
  if ((((size_t)ptr) & (FM_PAGE_SIZE - 1)) == 0) {
    return fm_lm_realloc(ptr, size, FM_LM_T_TRANSIENT);
  }
  page_meta_t *meta = (page_meta_t *)__fm_rounddown((size_t)ptr, FM_PAGE_SIZE);
  if (size <= meta->size) {
    return ptr;
  }
  void *p = fm_sm_malloc(size);
  if (p != NULL) {
    memcpy(p, ptr, meta->size);
    fm_sm_free(ptr);
  }
  return p;
}
void *fm_sm_malloc(size_t size) {
  size_t i = slab_index(size);
  if (i == FM_SM_INVALID_SLAB) {
    return lm_malloc(size, FM_LM_T_TRANSIENT);
  }
  for (CList *iter = slab_lists[i].next; iter != &slab_lists[i];
       iter = iter->next) {
    page_meta_t *meta = c_list_entry(iter, page_meta_t, link);
    size_t index = bitmap_next_free(meta);
    if (index != FM_SM_INVALID_SLAB) {
      bitmap_set(meta, index);
      if (bitmap_all_used(meta)) {
        c_list_unlink(iter);
        FM_DEBUG("Unlinking fully utilized slab: %p %ld\n", meta, meta->size);
      }
      return index_to_ptr(meta, index);
    }
  }
  // Create a new slab here
  void *slab = fm_lm_malloc(FM_PAGE_SIZE, FM_LM_T_PERSISTENT);
  if (slab == NULL) {
    return NULL;
  }
  page_meta_t *meta = (page_meta_t *)slab;
  meta->bitmap[0] = 0;
  meta->bitmap[1] = 0;
  meta->size = slab_sizes[i];
  meta->slab_index = i;
  meta->count = (FM_PAGE_SIZE - PAGE_META_RESERVED_SIZE) / meta->size;
  c_list_link_front(&slab_lists[i], &meta->link);
  FM_DEBUG("Creating new slab: %p %ld\n", meta, meta->size);

  size_t element_index = 0;
  bitmap_set(meta, element_index);
  return index_to_ptr(meta, element_index);
}